<resources>
    <string name="app_name" translatable="false">JSports</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="jsports_login">JSports - Login</string>
    <string name="jsports_register">JSports - Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="username_required">Username required</string>
    <string name="username_short">Username has to be at least 4 characters</string>
    <string name="username_long">Username has to be less than 30 characters long</string>
    <string name="username_wrong">Wrong username</string>
    <string name="password_required">Password required</string>
    <string name="email">Email</string>
    <string name="wrong_email">Wrong email</string>
    <string name="email_required">Email required</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="full_name">Full name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm password</string>
    <string name="country">Country</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="yyyy_mm_dd">yyyy-mm-dd</string>
    <string name="ful_name_required">Full name required</string>
    <string name="full_name_long">Full name is too long</string>
    <string name="full_name_short">Full name is too short</string>
    <string name="password_short">Password is too short</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="country_not_found">Country is not found</string>
    <string name="height_large">Height is too big</string>
    <string name="height_small">Height is too small</string>
    <string name="weight_large">Weight is too big</string>
    <string name="weight_small">Weight is too small</string>
    <string name="date_format_wrong">Wrong date format</string>
    <string name="age_small">The age is to small</string>
    <string name="age_big">The age is to big</string>
    <string name="language">Language</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="jsports_forgot_pass">JSports - Reset Password</string>
    <string name="jsports_home">JSports - Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="jsports_profile">JSports - Profile</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="swimming">Swimming</string>
    <string name="cycling">Cycling</string>
    <string name="rowing">Rowing</string>
    <string name="skiing">Skiing</string>
    <string name="skating">Skating</string>
    <string name="biathlon">Biathlon</string>
    <string name="running">Running</string>
    <string name="number_of_people">Number of people:</string>
    <string name="males">Males:</string>
    <string name="females">Females:</string>
    <string name="events_count">Events count:</string>
    <string name="your_events_count">Your events count:</string>
    <string name="your_events_percent">Your events percent:</string>
    <string name="percent" translatable="false">%1$s%%</string>
    <string name="not_set">Not set</string>
    <string name="sports">Sports</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="events">Events</string>
    <string name="jsports_events">JSports - Events</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="result">Result:</string>
    <string name="distance">Distance:</string>
    <string name="comment">Comment:</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="min">min</string>
    <string name="s">s</string>
    <string name="no_comment">No comment</string>
    <string name="add">Add</string>
    <string name="no_events_yet">No events yet</string>
    <string name="no_sport_disciplines">No sport disciplines</string>
    <string name="delete_event">Delete event</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_event_message">Are you sure you want to delete this event?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="add_event">Add event</string>
    <string name="distance_">Distance</string>
    <string name="time_">Time</string>
    <string name="comment_">Comment</string>
    <string name="distance_required">Distance required</string>
    <string name="time_required">Time required</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="change_profile_message">Are you sure you want to change profile data?</string>
    <string name="wrong_full_name">Wrong full name</string>
    <string name="users">Users</string>
    <string name="full_name_label">Full name:</string>
    <string name="username_label">Username:</string>
    <string name="see_more">See more</string>
    <string name="country_label">Country:</string>
    <string name="gender_label">Gender:</string>
    <string name="jsports_users">JSports - Users</string>
    <string name="see_events">See events</string>
    <string name="jsports_user_events">JSports - %1s events</string>
    <string name="jsports_charts">JSports - Charts</string>
    <string name="not_enough_chart_data">Not enough data to build any charts</string>
    <string name="register_noun">Register</string>
    <string name="star" translatable="false">*</string>
    <string name="pick_date">Pick date</string>
</resources>
