<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".fragments.auth.LoginFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_login_username"
            style="@style/TextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/TextInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16sp"
            android:text="@string/forgot_password"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_login"
            style="@style/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/don_t_have_an_account"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>