<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".activities.EditProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                    <RadioButton
                        android:id="@+id/rb_profile_gender_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_profile_gender_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/country"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/height"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_profile_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ems="10"
                    android:hint="@string/yyyy_mm_dd"
                    android:importantForAutofill="no"
                    android:inputType="date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.androidbuts.multispinnerfilter.MultiSpinner
                    android:id="@+id/spin_edit_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

        <include
            android:id="@+id/ls_edit_profile"
            layout="@layout/loading_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>
</ScrollView>